# LyciaMusic

./: .gitignore  NOTICE  README.md  README_EN.md  eslint.config.js  index.html  package-lock.json  package.json  project_structure.md  vite.config.ts  vitest.config.ts
.codex/: tmp-bad-eslrc.mjs  tmp-english-eslrc.mjs  tmp-lyrics-test.mjs  tmp-placeholder-eslrc.mjs
.codex/environments/: environment.toml
MD/: 1.2.6更新日志.md  1.3.1更新日志.md  @sort.md  answer.md  cover.md  prompt.txt  refactor-step-02-state-map.md  refactor-step-03-entry-boundaries.md  request.md  sort.md  外观架构分析报告.md  项目结构.md
scripts/: check-version.js  sync-version.js
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_runtime.rs  database.rs  foreground_window.rs  lib.rs  player.rs  statistics.rs  system_fonts.rs  toolbox.rs  window_boundary.rs  window_material.rs  window_theme.rs
src-tauri/src/database/: migrations.rs  mod.rs  reset.rs  schema.rs  state.rs
src-tauri/src/music/: covers.rs  files.rs  library.rs  mod.rs  scanner.rs  sidebar.rs  tags.rs  types.rs  utils.rs
src-tauri/src/music/scanner/: diff.rs  orchestrator.rs  parser.rs  progress.rs  repository.rs
src-tauri/src/player/: commands.rs  device.rs  mod.rs  runtime.rs  types.rs
src/components/common/: DragGhost.vue  FavoritesGrid.vue  FolderTreeItem.vue  QualityBadge.vue
src/components/headers/: AlbumDetailHeader.vue  ArtistDetailHeader.vue  DetailHeader.vue  FavoritesHeader.vue  FoldersHeader.vue  LocalMusicHeader.vue  RecentHeader.vue  StatisticsHeader.vue
src/components/home/: ArtistAlbumGrid.vue  HomeContentPanel.vue  HomeEmptyState.vue  HomeHeaderPanel.vue  HomeViewPane.vue
src/components/layout/: GlobalBackground.vue  MainShell.vue  MiniPlayer.vue  PlayerFooter.vue  Sidebar.vue  SidebarBrand.vue  SidebarNavigation.vue  SidebarPlaylists.vue  TitleBar.vue
src/components/overlays/: AddToPlaylistModal.vue  FolderContextMenu.vue  MoveToFolderModal.vue  SongContextMenu.vue
src/components/player/: AmlLyricPlayer.vue  DesktopLyrics.vue  DesktopLyricsSettingsMenu.vue  (+8 more)
src/composables/: colorExtraction.ts  dragState.ts  lyrics.test.ts  lyrics.ts  player.ts  playerActions.test.ts  playerCore.ts  playerFileManager.ts  playerFolderImport.ts  playerFolderTree.ts  playerHistoryFavorites.ts  playerLibraryBatch.ts  playerLibraryManager.ts  playerLibraryRuntime.ts  playerLibraryScan.ts  playerLifecycle.ts  playerNavigation.ts  playerPersistence.ts  playerPlayback.ts  playerPlaylist.ts  playerPreferencesState.ts  playerQueue.test.ts  playerQueue.ts  playerRestore.ts  playerService.ts  playerState.ts  playerUiShell.ts  settings.ts  useAppShell.ts  useAppShellTheme.ts  useAppThemeSync.ts  useCollectionsActions.ts  useCoverCache.ts  useCustomThemeModal.ts  useDesktopLyricsDisplay.ts  useDesktopLyricsWindowBridge.ts  useDesktopLyricsWindowController.ts  useExternalPathBridge.ts  useFileImport.ts  useHomeArtistAlbums.ts  (+35 more)
src/router/: index.ts
src/stores/: collections.ts  library.ts  navigation.ts  playback-ui.test.ts  playback.ts  settings.test.ts  settings.ts  ui.ts
src/types/: index.ts
src/utils/: alphabetIndex.ts  update.test.ts  update.ts
src/views/: Albums.vue  Artists.vue  Favorites.vue  Home.vue  Recent.vue  Settings.vue
(+52 files in other folders)
