[package]
name = "lycia_music"
version = "1.0.0"
description = "A beautiful local music player powered by Tauri."
authors = ["lyc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_cloud_music_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
lofty = "0.21" # 专门处理音乐元数据的库
tauri-plugin-dialog = "2"
base64 = "0.22.1"
rodio = "0.20"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
urlencoding = "2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
sha2 = "0.10.9"
hex = "0.4.3"
tokio = { version = "1.48.0", features = ["full"] }
souvlaki = "0.7"
raw-window-handle = "0.6"
regex = "1"
cpal = "0.15"
tauri-plugin-single-instance = "2"

# ... 现有的内容 ...

# 👇 新增：让依赖库在开发模式下也全速运行
[profile.dev.package."*"]
opt-level = 3

