[package]
name = "lycia_music"
version = "1.2.6"
description = "A beautiful local music player powered by Tauri."
authors = ["lyc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_cloud_music_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
lofty = "0.21"
id3 = "1.14"
encoding_rs = "0.8"
base64 = "0.22.1"
rodio = { version = "0.20", default-features = false, features = ["flac", "vorbis", "wav", "mp3", "symphonia-aac", "symphonia-aiff", "symphonia-alac", "symphonia-isomp4"] }
symphonia = { version = "0.5.5", default-features = false, features = ["aac", "adpcm", "aiff", "alac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
urlencoding = "2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
sha2 = "0.10.9"
hex = "0.4.3"
tokio = { version = "1.48.0", features = ["full"] }
souvlaki = "0.7"
raw-window-handle = "0.6"
regex = "1"
cpal = "0.15"
tauri-plugin-single-instance = "2"
rayon = "1.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_UI_Shell", "Win32_System_Registry", "Win32_System_SystemInformation"] }

[profile.dev.package."*"]
opt-level = 3
